# mkdocs-mermaid2-plugin

./: .gitignore  README.md  pyproject.toml
mermaid2/: __init__.py  plugin.py  pyjs.py  util.py
