[tool.poetry]
name = "mermaid2"
version = "0.2.0"  # Rewinding version till first successful test
description = "A mkdocs plugin that interprets mermaid graphs in the markdown file. Adapted for the OUH Custom Material Theme build."
authors = ["Pugong <pugong.liu@gmail.com>", "Fralau <fralau2035@yahoo.com>", "Carl Marshall <572826+marshalc@users.noreply.github.com>"]
license = "MIT"
maintainers = ["Carl Marshall <572826+marshalc@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/ouhft/mkdocs-mermaid2-plugin/"  # Until/unless we do an OUH build at ouhft.github.io
repository = "https://github.com/ouhft/mkdocs-mermaid2-plugin.git"
documentation = "https://github.com/ouhft/mkdocs-mermaid2-plugin/"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup :: HTML"
]
include = ["mermaid2", "README.md", "LICENSE"]
exclude = [".github", "test"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.2"
pymdown-extensions = "^8.2"
beautifulsoup4 = ">=4.6.3"
jsbeautifier = "^1.14.0"


[tool.poetry.dev-dependencies]
material = {version = "^7", source = "oxnetcnaf01"}
PyYAML = "^5.4.1"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "oxnetcnaf01"
url = "https://oxnetcnaf01.oxnet.nhs.uk/repository/pypi-internal/simple/"
secondary = true

[tool.poetry.plugins."mkdocs.plugins"]
"mermaid2" = "mermaid2.plugin:MarkdownMermaidPlugin"
